# Face-Expression-Detector

./: .gitignore  .gitmodules  CMakeLists.txt  index.html  main.js  package.json  renderer.js  run.sh  style.css
app/src/: main.cpp
doc/: proyectoTFG.tex
doc/portada/: portada.tex  portada_2.tex
doc/prefacios/: prefacio.tex
src/: findFace.cpp  main.cpp
